--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,157 @@
 <h1>Welcome!</h1>
 
+{{!-- BEGINNING OF APPLE PAGE --}}
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../../../favicon.ico">
+
+    <title>Product example for Bootstrap</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="product.css" rel="stylesheet">
+  </head>
+
+  <body>
+
+
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+      <div class="col-md-5 p-lg-5 mx-auto my-5">
+        <h1 class="display-4 font-weight-normal">Punny headline</h1>
+        <p class="lead font-weight-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple's marketing pages.</p>
+        <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+      </div>
+      <div class="product-device box-shadow d-none d-md-block"></div>
+      <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
+    </div>
+
+{{!-- beginning of first row --}}
+          <button type="button" class="btn btn-outline-dark waves-effect">Play
+                      </button>
+    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+      <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+        <div class="my-3 py-3">
+          <h2 class="display-5">Janice Chow</h2>
+          <p class="lead">And an even wittier subheading.</p>
+        </div>
+
+        <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;">
+             <img src="https://www.dropbox.com/s/w6e6epwzlcr7pe4/bestfriend.png?raw=1" class="img-fluid z-depth-1"/>
+        </div>
+
+          <button type="button" class="btn btn-outline-dark waves-effect">Play
+                      </button>
+      </div>
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 p-3">
+          <h2 class="display-5">Sam O'Shaughnessy</h2>
+          <p class="lead">And an even wittier subheading.</p> 
+        </div>
+
+        <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"><img src="https://www.dropbox.com/s/fm8vurruc9h5gtz/homie.png?raw=1" class="img-fluid  z-depth-1"/></div>
+      </div>
+    </div>
+{{!-- end of first row --}}
+
+{{!-- beginning of second row --}}
+    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+      <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+        <div class="my-3 py-3">
+          <h2 class="display-5">Janice Chow</h2>
+          <p class="lead">And an even wittier subheading.</p>
+        </div>
+        <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;">
+             <img src="https://www.dropbox.com/s/v0pxvw5bp4ffdan/newFriend.png?raw=1" class="img-fluid z-depth-1"/>
+        </div>
+      </div>
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 p-3">
+          <h2 class="display-5">Sam O'Shaughnessy</h2>
+          <p class="lead">And an even wittier subheading.</p> 
+        </div>
+
+        <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"><img src="https://www.dropbox.com/s/fm8vurruc9h5gtz/homie.png?raw=1" class="img-fluid  z-depth-1"/></div>
+      </div>
+    </div>
+{{!-- end of second row --}}
+
+
+{{!-- beginning of third row --}}
+    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+      <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+        <div class="my-3 py-3">
+          <h2 class="display-5">
+          <button type="button" class="btn btn-outline-dark waves-effect">Play
+                      </button> with Janice Chow</h2>
+          <p class="lead">And an even wittier subheading.</p>
+          
+        </div>
+        <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;">
+             <img src="https://www.dropbox.com/s/st884b1gigvc350/dear.png?raw=1" class="img-fluid z-depth-1"/>
+        </div>
+      </div>
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 p-3">
+          <h2 class="display-5">Sam O'Shaughnessy</h2>
+          <p class="lead">And an even wittier subheading.</p> 
+        </div>
+
+        <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"><img src="https://www.dropbox.com/s/o8phvvtmad1cl3p/family.png?raw=1" class="img-fluid  z-depth-1"/></div>
+      </div>
+    </div>
+{{!-- end of row --}}
+
+{{!-- beginning of row --}}
+    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+      <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+        <div class="my-3 py-3">
+          <h2 class="display-5">Janice Chow</h2>
+          <p class="lead">And an even wittier subheading.</p>
+        </div>
+        <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;">
+             <img src="https://www.dropbox.com/s/iydzojfzl38grdg/colleague.png?raw=1" class="img-fluid z-depth-1"/>
+        </div>
+      </div>
+      <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="my-3 p-3">
+          <h2 class="display-5">Sam O'Shaughnessy</h2>
+          <p class="lead">And an even wittier subheading.</p> 
+        </div>
+
+        <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"><img src="https://www.dropbox.com/s/o8phvvtmad1cl3p/family.png?raw=1" class="img-fluid  z-depth-1"/></div>
+      </div>
+    </div>
+{{!-- end of row --}}
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="../../../../assets/js/vendor/popper.min.js"></script>
+    <script src="../../../../dist/js/bootstrap.min.js"></script>
+    <script src="../../../../assets/js/vendor/holder.min.js"></script>
+    <script>
+      Holder.addTheme('thumb', {
+        bg: '#55595c',
+        fg: '#eceeef',
+        text: 'Thumbnail'
+      });
+    </script>
+  </body>
+</html>
+
+
+{{!-- END OF APPLE PAGE --}}
+
 
 {{!-- beginning of container --}}
 <div class="container my-5">
